# pytweet

./: .gitignore  README.md  list.py  main.py  pyproject.toml  tapi.py  text.txt
scrap/: menu-example0.py  menu-example1.py  scrap.py
